# backend/src/main/java/org/rdfarchitect/api/dto/validation/IssueOccurrenceDTO.java
@@ -1,0 +1,40 @@
+/*
+ *    Copyright (c) 2024-2026 SOPTIM AG
+ *
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
+ *
+ */
+
+package org.rdfarchitect.api.dto.validation;
+
+import lombok.Builder;
+import lombok.Data;
+
+import java.util.UUID;
+
+@Data
+@Builder
+public class IssueOccurrenceDTO {
+
+    private String graphUri;
+
+    private String keyword;
+
+    private UUID uuid;
+
+    private UUID classUUID;
+
+    private UUID packageUUID;
+
+    private String value;
+}
