# backend/src/main/java/org/rdfarchitect/services/validation/SchemaValidationReportToMarkdownUseCase.java
@@ -17,7 +17,7 @@
 
 package org.rdfarchitect.services.validation;
 
-import org.rdfarchitect.api.dto.validation.SchemaValidationReportDTO;
+import org.rdfarchitect.api.dto.validation.ValidationReportDTO;
 
 public interface SchemaValidationReportToMarkdownUseCase {
 
@@ -29,5 +29,5 @@ public interface SchemaValidationReportToMarkdownUseCase {
      * @param title the title to use in the Markdown report
      * @return the Markdown representation of the report
      */
-    String convertToMarkdown(SchemaValidationReportDTO report, String title);
+    String convertToMarkdown(ValidationReportDTO report, String title);
 }
